--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	</style>
 </head>
 <body>
-    <img id = "menu" src="imagens/Sprite-menu.png" >
+    <img id = "menu" src="Sprite-menu.png" >
 	
 	<div id = "jogar" ></div>
     <div id = "titulo"></div>
