--- a/jogoFase2.html
+++ b/jogoFase2.html
@@ -411,7 +411,7 @@
 			estadoAtual = estados.jogar;
 
 			img = new Image();
-			img.src = "imagens/Sprite_cartaPA.png";
+			img.src = "Sprite_cartaPA.png";
 
 
 
@@ -490,7 +490,7 @@
 					ctx.fillStyle = "white"
 					ctx.fillRect(25, 125, 550, 150);
 					ctx.font = "20px Arial"
-					ctx.fillStyle = "black";
+					ctx.fillStyle = "black"; 
 					ctx.fillText("- Isso! Vamos coletar o vidro e colocar na lixeira Amarela.", 25, 150);
 					ctx.fillText(" Podem ser garrafas, potes de vidro, frascos de remédio ou", 25, 175);
 					ctx.fillText(" frascos de perfume", 25, 200)
