--- a/jogoIdioma.html
+++ b/jogoIdioma.html
@@ -38,7 +38,7 @@
 	</style>
 </head>
 <body>
-    <img id = "menu" src="imagens/Sprite-idioma.png" >
+    <img id = "menu" src="Sprite-idioma.png" >
 	
 	<div id = "jogar"></div>
 	<div id = "opcoes"></div>
