--- a/JogoFase2Ingles.html
+++ b/JogoFase2Ingles.html
@@ -411,7 +411,7 @@
 			estadoAtual = estados.jogar;
 
 			img = new Image();
-			img.src = "imagens/Sprite_cartaPA.png";
+			img.src = "Sprite_cartaPA.png";
 
 
 
