--- a/jogo.html
+++ b/jogo.html
@@ -399,7 +399,7 @@
 			estadoAtual = estados.jogar;
 
 			img = new Image();
-			img.src = "imagens/Sprite_cartaPA.png";
+			img.src = "Sprite_cartaPA.png";
 
 
 
