--- a/jogoFase3.html
+++ b/jogoFase3.html
@@ -392,7 +392,7 @@
 			estadoAtual = estados.jogar;
 
 			img = new Image();
-			img.src = "imagens/Sprite_cartaPA.png";
+			img.src = "Sprite_cartaPA.png";
 
 
 
