--- a/jogo.html
+++ b/jogo.html
@@ -264,7 +264,7 @@
 					velocidade = 13 //a velocidade sobe
 				}
 
-				else if (bloco.score >= 40 && contador < 3){ // se o score for igual ou maior que 40
+				else if (bloco.score >= 40){ // se o score for igual ou maior que 40
 					velocidade = 0
 					estadoAtual = estados.perdeu
 					fundo.velocidade = 0;
