--- a/jogo.html
+++ b/jogo.html
@@ -2,6 +2,7 @@
 <html lang = "pt-br">
 <head>
 	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title> Teste 123 </title>
 	<script src = "Sprite.js"></script>
 	<script src= "tentandop.html"></script>
