--- a/jogo.html
+++ b/jogo.html
@@ -2,8 +2,8 @@
 <html lang = "pt-br">
 <head>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=10">
-	<title> Teste </title>
+	<meta name="viewport" content="width=device-width, initial-scale=100">
+	<title> Teste12 </title>
 	<script src = "Sprite.js"></script>
 	<script src= "tentandop.html"></script>
 	<style>
