--- a/jogo.html
+++ b/jogo.html
@@ -2,7 +2,7 @@
 <html lang = "pt-br">
 <head>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=100">
+	<meta name="viewport" content="width=device-width, initial-scale=25">
 	<title> Teste12 </title>
 	<script src = "Sprite.js"></script>
 	<script src= "tentandop.html"></script>
@@ -442,7 +442,7 @@
 
 			ctx.fillStyle = "#fff";
 			ctx.font = "40px Arial"
-			ctx.fillText("Pontos:", 30, 68);
+			ctx.fillText("Pontos:", LARGURA / 2 - jogar.largura / 2 - 30, ALTURA / 2 - jogar.altura / 2 - 68);
 
 			ctx.fillStyle = "#fff";
 			ctx.font = "40px Arial";
