--- a/jogo.html
+++ b/jogo.html
@@ -442,7 +442,7 @@
 
 			ctx.fillStyle = "#fff";
 			ctx.font = "40px Arial"
-			ctx.fillText("Pontos:", LARGURA / 2 - 30 / 2, ALTURA / 2 - 68 / 2);
+			ctx.fillText("Pontos:", LARGURA / 2 - jogar.largura / 2 - 30, ALTURA / 2 - jogar.largura / 2 - 68);
 
 			ctx.fillStyle = "#fff";
 			ctx.font = "40px Arial";
