--- a/jogo.html
+++ b/jogo.html
@@ -2,6 +2,7 @@
 <html lang = "pt-br">
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title> Teste 123 </title>
 	<script src = "Sprite.js"></script>
 	<style>
@@ -391,8 +392,8 @@
 			LARGURA = window.innerWidth;
 
 			if (LARGURA >= 500){
-				LARGURA = 600;
-				ALTURA = 600;
+				LARGURA = 300;
+				ALTURA = 300;
 			}
 			//propiedades do canvas
 			canvas = document.createElement("canvas");
